@@ -1,0 +1,8 @@
+from venusian.tests.fixtures import decorator
+
+@decorator()
+class Parent(object):
+    pass
+
+class Child(Parent):
+    pass
